Fix header menu alignment

--- a/_frontend/frontsize/vueday-2019/widgets/header.scss
+++ b/_frontend/frontsize/vueday-2019/widgets/header.scss
@@ -31,6 +31,7 @@
     display: table-cell;
     text-align: right;
     width: 100%;
+    vertical-align: middle;
   }
 
   @include element ('menu-desktop') {
